Fix typeahead text fields on IE

--- a/src/alto-ui/Form/Typeahead/Typeahead.scss
+++ b/src/alto-ui/Form/Typeahead/Typeahead.scss
@@ -55,5 +55,5 @@
 }
 
 .Typeahead__input .textfield__input {
-  flex-basis: 0;
+  flex-basis: auto;
 }
